Fixed header spacing issue on prisoner show page.

--- a/app/assets/stylesheets/prisoners.css.scss
+++ b/app/assets/stylesheets/prisoners.css.scss
@@ -47,7 +47,7 @@
     vertical-align: top;
   }
   h1 {
-    margin: 0;
+    margin-top: 0;
   }
   .age {
     color: #d9534f;
